--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ documentation = "https://docs.rs/alphred"
 homepage = "https://github.com/kejadlen/alphred-rs"
 repository = "https://github.com/kejadlen/alphred-rs"
 license = "MIT"
+edition = "2018"
 
 [dependencies]
+anyhow = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
